# direwolf-dashboard

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  screenshot.png.xmp
contrib/: check_db.py  direwolf-dashboard.service  install.sh
docs/superpowers/plans/: 2026-04-15-map-transmit-arcs.md  2026-04-16-config-simplification.md  2026-04-23-gpx-overlay.md  2026-05-05-port-client-monitor.md
docs/superpowers/specs/: 2026-04-15-map-transmit-arcs-design.md  2026-04-16-config-simplification-design.md  2026-04-23-gpx-overlay-design.md  2026-05-05-port-client-monitor-design.md
src/direwolf_dashboard/: __init__.py  __main__.py  agw.py  cli.py  config.py  lifecycle.py  log_tailer.py  processor.py  routers.py  server.py  storage.py  tile_proxy.py
src/direwolf_dashboard/static/: app.js  index.html  style.css
tests/: sample_route.gpx  sample_track.gpx  test_agw.py  test_config.py  test_gpx_overlay.html  test_lifecycle.py  test_log_tailer.py  test_processor.py  test_routers.py  test_server.py  test_storage.py
